<resources>
    <string name="app_name">Stitch Counter</string>
    <string name="action_new_counter">New Counter</string>
    <string name="action_help">Help</string>
    <string name="action_delete">Delete</string>
    <string name="action_current_counter">Current Counter</string>
    <string name="action_library">Library</string>
    <string name="action_settings">Settings</string>
    <string name="action_single_counter_btn">New Single Counter</string>
    <string name="action_double_counter_btn">New Double Counter</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="counter_project_name_hint">Name your project</string>
    <string name="counter_number_basic">%1$d</string>
    <string name="counter_number_stitch">%1$d</string>
    <string name="counter_number_row">%1$d</string>
    <string name="counter_adjust_by">Adjust by</string>
    <string name="counter_adjust_by_1">1</string>
    <string name="counter_adjust_by_5">5</string>
    <string name="counter_adjust_by_10">10</string>
    <string name="counter_plus_btn">+</string>
    <string name="counter_minus_btn">-</string>
    <string name="counter_reset_btn">Reset</string>
    <string name="counter_total_rows">Total Rows/Rounds</string>
    <string name="counter_stitch_header">Stitch Counter</string>
    <string name="counter_row_header">Row Counter</string>
    <string name="counter_progress">Progress %1$s %%</string>
    <string name="dialog_reset_message">Are you sure you want to reset the %1$s?</string>
    <string name="help_main_activity_1">
        Tap here to open a new single counter. Use for quick projects that you don\'t need to track
        the progress of.
    </string>
    <string name="help_main_activity_2">
        Tap here to open a new double counter. The double counter has two counters to keep track of
        your stitches and rows/rounds. The double counter will track your progress if you enter
        your total rows/rounds.
    </string>
    <string name="help_single_counter_1">
        Tap here to update your project name.
    </string>
    <string name="help_single_counter_adjustment">
        Tap these buttons to change the number your counter increases/decreases by.
    </string>
    <string name="help_single_counter_plus_minus">
        Tap the + and - buttons to increase or decrease the counter.
    </string>
    <string name="help_single_counter_reset">
        Tap the "Reset" button to reset your counter to 0.
    </string>
    <string name="help_double_counter_activity_1">
        Tap here to update your project name.
    </string>
    <string name="help_double_counter_activity_2">
        Tap these buttons to change the number your stitch counter increases/decreases by. The row
        counter has equivalent buttons.
    </string>
    <string name="help_double_counter_activity_3">
        Tap the + and - buttons to increase or decrease the row counter. The stitch counter has
        equivalent buttons.
    </string>
    <string name="help_double_counter_activity_4">
        Tap the "Reset" button to reset the stitch counter to 0. The row counter has an equivalent
        button.
    </string>
    <string name="help_double_counter_activity_4_2">
        Tap the "Reset" button to reset the row counter to 0. The stitch counter has an equivalent
        button.
    </string>
    <string name="help_double_counter_activity_5">
        Tap here to update total rows/rounds.
    </string>
    <string name="help_double_counter_activity_6">
        Here you can see the progress of your project if you\'ve enter total rows/rounds.
    </string>
    <string name="help_library_delete_many_mode">
        Tap here if you want to delete multiple projects at a time.
    </string>
    <string name="help_library_delete_single">
        To delete a single project, press and hold a project to make a delete button appear.
    </string>
    <string name="library_no_projects">You have no saved projects.</string>
    <string name="title_activity_themes">ThemesActivity</string>
    <string name="version">Version</string>
</resources>
