<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.etaspare.stitchcounter.MainActivity">

        <include
            android:id="@+id/toolbar_main"
            layout="@layout/toolbar" />

        <Button
            android:id="@+id/button_basic_counter"
            android:layout_width="270dp"
            android:layout_height="85dp"
            android:onClick="createNewSingleCounter"
            android:text="@string/action_single_counter_btn"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button_advanced_counter"
            android:layout_width="270dp"
            android:layout_height="85dp"
            android:onClick="createNewDoubleCounter"
            android:text="@string/action_double_counter_btn"
            android:layout_marginBottom="193dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_basic_counter"
            app:layout_constraintVertical_bias="0.642"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.etaspare.stitchcounter.MainActivity"
        android:visibility="invisible"
        android:id="@+id/top_layout">

        <TextView
            android:id="@+id/help_main_activity_1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/help_main_activity_1"
            android:background="@drawable/annotation_bubble"
            android:padding="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="96dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/help_main_activity_2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/annotation_bubble"
            android:padding="5dp"
            android:text="@string/help_main_activity_2"
            android:layout_marginBottom="56dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:layout_width="2dp"
            android:layout_height="56dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="160dp"
            app:layout_constraintTop_toBottomOf="@+id/help_main_activity_1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <View
            android:layout_width="2dp"
            android:layout_height="60dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="160dp"
            app:layout_constraintBottom_toTopOf="@+id/help_main_activity_2"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>